--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   background: #222;
   padding: 20px;
   border-radius: 10px;
-  padding-left:10px;
+  padding-right:10px;
   box-shadow: 0 0 20px rgba(0,0,0,0.5);
   
 }
